--- a/RainWindows.csproj
+++ b/RainWindows.csproj
@@ -37,10 +37,14 @@
   <PropertyGroup>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Test|x86'">
+    <OutputPath>bin\x86\Test\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Cameras\Camera.cs" />
     <Compile Include="Cameras\OrthographicCamera.cs" />
     <Compile Include="Cameras\PerspectiveCamera.cs" />
+    <Compile Include="Controller\IMotionTracking.cs" />
     <Compile Include="Controller\InputHandler.cs" />
     <Compile Include="Controller\RenderingEngine.cs" />
     <Compile Include="Controller\WorldContainer.cs" />
