--- a/RainWindows.csproj
+++ b/RainWindows.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Main\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test\VertexPositionNormalColor.cs" />
+    <Compile Include="VertexType\VertexPositionNormalColor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -87,12 +87,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\Tango\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Rain\RainAndroid.csproj">
-      <Project>{56170683-b97b-4136-bb01-c5b4471cd3a9}</Project>
-      <Name>RainAndroid</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
