added 2D / 3D switch, added spheres, added inputhandler

--- a/RainWindows.csproj
+++ b/RainWindows.csproj
@@ -50,14 +50,17 @@
     <Compile Include="Cameras\Camera.cs" />
     <Compile Include="Cameras\OrthographicCamera.cs" />
     <Compile Include="Cameras\PerspectiveCamera.cs" />
+    <Compile Include="Controller\ICameraController.cs" />
     <Compile Include="Controller\IMotionTracking.cs" />
-    <Compile Include="Controller\InputHandler.cs" />
+    <Compile Include="Controller\WindowsInputHandler.cs" />
     <Compile Include="Controller\RenderingEngine.cs" />
     <Compile Include="Controller\WorldContainer.cs" />
     <Compile Include="Controller\WorldController.cs" />
     <Compile Include="Cameras\FirstPersonCamera.cs" />
     <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Entities\Primitives\Cube.cs" />
+    <Compile Include="Entities\Primitives\CubePrimitive.cs" />
+    <Compile Include="Entities\Primitives\GeometricPrimitive.cs" />
+    <Compile Include="Entities\Primitives\SpherePrimitive.cs" />
     <Compile Include="EntityComponents\Graphics.cs" />
     <Compile Include="Entities\Room\Floor.cs" />
     <Compile Include="Main\RainWindows.cs" />
